add day countter

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en">
+<html lang="en"
+	  xmlns:th="http://www.thymeleaf.org">
 <head>
 <title>Calendar 04</title>
 <meta charset="utf-8">
@@ -15,7 +16,16 @@
 		<div class="container">
 			<div class="row justify-content-center">
 				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">Calendar #04</h2>
+					<h2 class="heading-section">동,현 Time</h2>
+				</div>
+			</div>
+			<div class="row justify-content-center">
+				<div class="card bg-light mb-3" style="max-width: 10rem;">
+					<div class="card-header" id="day-count" th:text="${daycounts}">daycounts</div>
+				</div>
+				<div style="width:50px"></div>
+				<div class="card bg-light mb-3" style="max-width: 10rem;">
+					<div class="card-header" id="d-days" th:text="${nextdays}">nextdays</div>
 				</div>
 			</div>
 			<div class="row">
