--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,16 +15,22 @@
 	<section class="ftco-section">
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="col-md-6 text-center mb-5">
-					<h2 class="heading-section">동,현 Time</h2>
+				<img src="images/abocado.png" class="img-thumbnail" style="background-color:#f8f9fd;width:15%;height:15%;border:0;">
+			</div>
+			<div class="row justify-content-center">
+				<div class="col-md-6 text-center mb-3">
+					<h2 class="heading-section">동현이</h2>
 				</div>
 			</div>
 			<div class="row justify-content-center">
+
 				<div class="card bg-light mb-3" style="max-width: 10rem;">
-					<div class="card-header" id="day-count" th:text="${daycounts}">daycounts</div>
+					<div class="card-header" th:text="${daycounts}">Header</div>
 				</div>
+
 				<div style="width:50px"></div>
-				<div class="card bg-light mb-3" style="max-width: 10rem;">
+
+				<div class="card bg-light mb-3" style="max-width: 20rem;">
 					<div class="card-header" id="d-days" th:text="${nextdays}">nextdays</div>
 				</div>
 			</div>
